--- a/llama.ipynb
+++ b/llama.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "from llama_index.core import (\n",
@@ -30,12 +39,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "documents = SimpleDirectoryReader(\"data\").load_data()\n",
-    "index = VectorStoreIndex.from_documents(documents)"
+    "index = VectorStoreIndex.from_documents(documents)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HF_TOKEN: Optional[str] = os.getenv(\"HUGGING_FACE_TOKEN\")\n",
+    "gpt4 = OpenAI(model=\"gpt-4\")\n",
+    "query = \"How is social media polarizing\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "**Node ID:** f507b96b-e94a-40ac-a870-b8c8efdcd399<br>**Similarity:** 0.8126638091070074<br>**Text:** International Journal of Computer Sciences and Engineering                                    Vol.5(10), Oct 2017 , E-ISSN: 2347 -2693  \n",
+       "  © 201 7, IJCSE All Rights Reserved                                                                                                                                      352 Advertising – We can  promote our business to the largest \n",
+       "audience . The whole world is open for you, and can \n",
+       "promote to them. It will help in increase the profits and \n",
+       "achieves the targets of Business.  \n",
+       " \n",
+       "Noble Cause – Social media can also be used for the noble \n",
+       "causes.The public is making use of social media for \n",
+       "contribut ion for needy people and it can be a quick way to \n",
+       "help such people.  \n",
+       " \n",
+       "Helps in Building Communities – Since our world has \n",
+       "different religions and beliefs, so people of different \n",
+       "communities can connect to discuss and share related stuffs.  \n",
+       " Conventional mark eting mediums such as the radio, TV \n",
+       "commercials and print ads are completely obsolete now \n",
+       "and demand for thousands of dollars. With the use of \n",
+       "social media the businesses can connect with their \n",
+       "targeted customers for free, the only cost is energy and \n",
+       "time.   \n",
+       " The increasing popularity of social sites like Twitter, \n",
+       "Facebook and LinkedIn, social networks has gained \n",
+       "attention as the most viable communication choice for \n",
+       "the bloggers, article writers and content creators.  \n",
+       " These long range informal communication destinations \n",
+       "have opened the open door for every one of the \n",
+       "b...<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Node ID:** 6c604b4e-abe8-4b5f-8ade-be3f0efbda25<br>**Similarity:** 0.8121739864839521<br>**Text:** © 201 7, IJCSE All Rights Reserved                                                                                                                                      347 International Journal of Computer Sciences and Engineering     Open Access  \n",
+       "Review  Paper                                              Volume -5, Issue -10                                          E-ISSN : 2347 -2693  \n",
+       "                 \n",
+       "A Study on Positive and Negative Effects of Social Media on Society  \n",
+       "W.Akram1*, R.Kumar2 \n",
+       "1* Department of Computer Applications, GDC Mendhar, Poonch , India  \n",
+       "2 Department of Computer Applications, GDC Mendhar, Poonch, India  \n",
+       "  \n",
+       "*Corresponding Author: wasimmir143@gmail.com  Mobile : +91 -7051388383  \n",
+       "Available online at: www.ijcseonline.org  \n",
+       "Received: 15/Sep/2017, Revised: 28/Sep/2017, Accepted: 19/Oct/2017, Published: 30/Oct/2017  \n",
+       "Abstract - Social media is a platform for public around the World to discuss their issues and opinions. Before knowing the \n",
+       "actual aspects of social media people must have to know what does social media mean? Social media is a term used to \n",
+       "describe the interaction bet ween groups or individuals in which they produce, share, and sometimes exchange ideas, images, \n",
+       "videos and many more over the internet and in virtual communities.  Children are growing up surrounded by mobile devices \n",
+       "and interactive social networking sites s uch as Twitter, MySpace, and Facebook, Orkut which has made the social media a \n",
+       "vital aspect of their life. Social n...<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Social media has both positive and negative effects on society. On the positive side, it can be used for advertising, promoting businesses to a large audience, and increasing profits. It can also be used for noble causes, such as contributing to needy people, and building communities by connecting people of different religions and beliefs. It provides a platform for bloggers, article writers, and content creators to connect with their audience and share their work. It also allows students and professionals to share and exchange information with like-minded individuals.\n",
+      "\n",
+      "On the negative side, social media can lead to cyber harassment, with many young people becoming victims of cyberbullying. Personal information and security can be hacked and shared on the internet. It can also lead to addiction, wasting time that could have been used for productive tasks. There are also cases of fraud and scams committed through social media. Furthermore, it can easily ruin someone's reputation by spreading false stories. It can also lead to the sharing of too much personal information, posing risks to users.\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_retriever = index.as_retriever(similarity_top_k=2)\n",
+    "retrievals = base_retriever.retrieve(query)\n",
+    "for n in retrievals:\n",
+    "    display_source_node(n, source_length=1500)\n",
+    "query_engine_base = RetrieverQueryEngine.from_args(base_retriever, llm=gpt4)\n",
+    "response = query_engine_base.query(query)\n",
+    "print(str(response))\n",
+    "\n"
    ]
   },
   {
@@ -50,106 +162,6 @@
     "    answer: str\n",
     "    paragraphs_supporting_answer_directly_quoted_from_data: List[str]\n",
     "    #page_numbers_of_each_paragraph: List[int]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "HF_TOKEN: Optional[str] = os.getenv(\"HUGGING_FACE_TOKEN\")\n",
-    "gpt4 = OpenAI(model=\"gpt-4\")\n",
-    "query = \"Why is sleep important for athletes\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "**Node ID:** a951764d-7a6d-453a-8688-e50d3a67ae4e<br>**Similarity:** 0.8899818537593805<br>**Text:** sleep and improve performance. Importantly, athletes have\n",
-       "been found to demonstrate poor self-assessment in terms ofsleep need, duration, and quality, potentially making themless likely to seek guidance or medical help when needed (50).\n",
-       "In addition, certain cultures appear to idealize the ability to\n",
-       "function with minimal sleep, potentially further inhibitingathletes from obtaining adequate sleep or seeking help.\n",
-       "Training volume and schedules exert important, potentially\n",
-       "negative effects on sleep. In a study of 27 adult athletesassigned to control (normal training), acute fatigue, and\n",
-       "functional overreaching groups, those nine athletes in the\n",
-       "functional overreaching group exhibited significant re-ductions in sleep time (17). Increases in acute training load\n",
-       "also have been shown to be associated with decreased sleep\n",
-       "duration and quality in female youth soccer players (54) andAustralian rules football players (31). Sleep duration also hasbeen found to be significantly affected by training schedule, with\n",
-       "decreased sleep and increased pretraining fatigue before days\n",
-       "with early morning training, (37) as well as nighttime compe-tition (38). On the other hand, despite worse sleep quality, no\n",
-       "change in sleep duration was identified with increased train-\n",
-       "ing load among elite adult male athletes during a residentialcamp (31). Given the important implications for health and\n",
-       "performance, further efforts to define the relationship be-\n",
-       "tween training and sleep constitute an important are...<br>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "**Node ID:** 411eb650-b9d2-481b-bdc5-dae7c100737f<br>**Similarity:** 0.8887387199922497<br>**Text:** competition, particularly in athl etic events with large elements\n",
-       "of quick decision-making.\n",
-       "Sleep, Injury, and Illness\n",
-       "Recent evidence suggests that training availability is a\n",
-       "primary determinant of athletic success, and injuries andillnesses represent the greatest obstacle to training partici-\n",
-       "pation in athletes. Although prior research has focused al-\n",
-       "most exclusively on youth athletes, the available evidencesuggests that impaired or decreased sleep is associated with\n",
-       "an increased risk of injury. In a study of middle and high\n",
-       "school athletes, Milewski et al. (25) found that those in-dividuals who slept less than 8 h per night on average were\n",
-       "70% more likely to report an injury than those who slept\n",
-       "more than 8 h. In addition, a recent study of 496 adolescentathletes from 16 different individual and team sports foundthat increased training load and decreased self-reported\n",
-       "sleep duration were independently associated with an in-\n",
-       "creased risk of injury. In fact, the greatest risk for injuryresulted when training load increased and sleep duration\n",
-       "decreased simultaneously, as is often seen in competitive\n",
-       "travel and training camps (52). The underlying mechanismfor the relationship between sleep loss and injury is unclear,\n",
-       "but may be related to resulting impairments in reaction time\n",
-       "and cognitive function after sleep deprivation that couldpredispose to acute injury (52). On the other hand, impaired\n",
-       "sleep may contribute to higher levels of fatigue that can\n",
-       "similarly contribute to...<br>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sleep is crucial for athletes for several reasons. It can enhance performance and is a key determinant of athletic success. Lack of adequate sleep can lead to poor self-assessment in terms of sleep need, duration, and quality, which can negatively impact an athlete's performance. Training volume and schedules can also affect sleep, with increased training loads and early morning training often leading to decreased sleep duration and quality. \n",
-      "\n",
-      "Sleep deprivation can also increase the risk of injuries. Studies have shown that athletes who sleep less than 8 hours per night are 70% more likely to report an injury than those who sleep more. Sleep loss can impair reaction time and cognitive function, which could increase the risk of acute injury. \n",
-      "\n",
-      "Furthermore, sleep deprivation can increase susceptibility to illnesses, particularly upper respiratory infections. It has been shown that individuals who sleep less than 7 hours are nearly three times as likely to develop an infection compared with those who sleep 8 hours or more. \n",
-      "\n",
-      "In addition to physical health and performance, sleep also impacts mental health. Athletes may experience stress from various sources, and this can be exacerbated by impairments in sleep duration and quality. Therefore, early identification and management of mental health issues in athletes is critical for improved sleep, health, and performance. \n",
-      "\n",
-      "Finally, athletes may also be at increased risk for certain medical conditions associated with impaired sleep, such as sleep-disordered breathing. Therefore, monitoring and improving sleep in athletes is crucial for their overall health and performance.\n"
-     ]
-    }
-   ],
-   "source": [
-    "base_retriever = index.as_retriever(similarity_top_k=2)\n",
-    "retrievals = base_retriever.retrieve(query)\n",
-    "for n in retrievals:\n",
-    "    display_source_node(n, source_length=1500)\n",
-    "query_engine_base = RetrieverQueryEngine.from_args(base_retriever, llm=gpt4)\n",
-    "response = query_engine_base.query(query)\n",
-    "print(str(response))\n",
-    "\n"
    ]
   },
   {
